[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameObject/DamagePopup/DamagePopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/RpgDigit.tres" type="DynamicFont" id=2]
[ext_resource path="res://Lib/Instanceable/BulletBehavior/BulletBehavior.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextNode:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="DamagePopup" type="Node2D"]
script = ExtResource( 1 )

[node name="TextNode" type="Node2D" parent="."]

[node name="Label" type="Label" parent="TextNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -7.0
margin_right = 22.0
margin_bottom = 7.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 22, 7 )
custom_fonts/font = ExtResource( 2 )
text = "12345"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletBehavior" parent="TextNode" instance=ExtResource( 3 )]
root_node = NodePath("./..")
active = true
process_mode = 0
speed = 60.0
speed_limit = false
min_speed = 0.0
max_speed = 150.0
acceleration = -60.0
gravity = 0.0
max_fall_speed = 900.0
angle_in_degrees = 0.0
kbody_move_and_collide = false
allow_negative_speed = false
signal_on_distance_travelled = 500.0

[node name="Anim" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )
